Yeni özellikler eklendi.

--- a/siddet_bicimleri.html
+++ b/siddet_bicimleri.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bir Kişi Daha Eksilmeyeceğiz!</title>
+    <title>Şiddet Biçimleri - Sessiz Çığlık</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="card.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Zalando+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- NAVBAR START-->
@@ -26,7 +23,7 @@
                     <a class="nav-link" href="istatistikler.html">İstatistikler</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="siddetin_turleri.html">Şiddetin Türleri</a>
+                    <a class="nav-link" href="siddet_bicimleri.html">Şiddet Biçimleri</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="istanbul_sozlesmesi.html">İstanbul Sözleşmesi</a>
@@ -65,7 +62,9 @@
                     <p> Bu şiddet biçimi, fiziksel üstünlük kurarak, bedene temas ederek ya da 
                         eşya kullanarak uygulanabilir. Yumruk atmak, tokat atmak, ısırmak, boğmak, 
                         tekmelemek, bıçakla yaralamak, kafasına sandalye fırlatmak fiziksel temas 
-                        içeren şiddet biçimlerine örnektir. Bağırmak, yumrukla tehdit etmek, korkutucu 
+                        içeren şiddet biçimlerine örnektir. 
+                    </p>
+                    <p>Bağırmak, yumrukla tehdit etmek, korkutucu 
                         şekilde bakmak, kapıyı tekmelemek, eşya kırmak, sağlık sorunları olduğunda 
                         doktora gitmesine izin vermemek ise sindirmek amacıyla fiziksel üstünlük 
                         kullanılarak uygulanan şiddet biçimlerine örnektir.
@@ -153,9 +152,13 @@
                         cezalandırmak amacıyla şiddet aracı olarak kullanılmasına “cinsel şiddet” 
                         denir. Kadınlar, sıklıkla fiziksel şiddet sonrası cinsel şiddete maruz kalırlar. 
                         Ancak utandıkları ve kendilerini suçlu hissettikleri için çoğu kez cinsel şiddeti 
-                        açıklayamazlar. Bu yüzden, evlilik içinde ve dışında cinsel şiddet çok yaygın 
+                        açıklayamazlar. 
+                    </p>
+                    <p>Bu yüzden, evlilik içinde ve dışında cinsel şiddet çok yaygın 
                         olmasına rağmen, yapılan araştırmalarda cinsel şiddet oranının diğer şiddet 
-                        biçimlerine göre daha düşük olduğu görülür.Tecavüz etmek, cinsel ilişkiye 
+                        biçimlerine göre daha düşük olduğu görülür.
+                    </p>
+                    <p>Tecavüz etmek, cinsel ilişkiye 
                         zorlamak, istemediği cinsel pozisyonlara zorlamak, “Hayır” dendiğini duymazdan 
                         gelmek, rızası olmadığı halde hoyratça ve acıtarak cinsel ilişkiye girmek, 
                         zorla ilaç, alkol veya uyuşturucu madde kullandırarak cinsel ilişkiye zorlamak, 
@@ -187,7 +190,9 @@
                 <div class="card_text">
                     <p> Maddi güç ve üstünlük, bir şiddet aracı olarak kadını kontrol etmek, 
                         denetlemek, küçük düşürmek, aşağılamak, cezalandırmak amacıyla 
-                        kullanılıyorsa “ekonomik şiddet” söz konusudur. En yaygın ekonomik 
+                        kullanılıyorsa “ekonomik şiddet” söz konusudur. 
+                    </p>
+                    <p>En yaygın ekonomik 
                         şiddet biçimleri arasında, kadının çalışmasına, meslek edinmesine, 
                         okulu ya da kursu bitirmesine veya işinde yükselmesine engel olmak, 
                         gelir ve birikimine el koymak, borçlandırmak (kadının adına kredi 
@@ -250,14 +255,18 @@
                     <p> Çok sayıda ergen ve genç kadın, yaşıtı olan erkek arkadaşı tarafından şiddete 
                         maruz kaldığı halde çoğunlukla yaşadıklarını anlamakta, anlamlandırmakta ve 
                         şiddetin belirtilerini tanımakta zorluk çekiyor. Flört şiddeti, korkutucu ve 
-                        kafa karıştırıcı bir deneyimdir. İki kişinin birbirini “çift” olarak tanımlamasının 
+                        kafa karıştırıcı bir deneyimdir. 
+                    </p>
+                    <p>İki kişinin birbirini “çift” olarak tanımlamasının 
                         ardından erkeğin, genç kadını kontrol etmeyi, denetlemeyi “hak” olarak görmesi, 
                         onun adına kararları vermek istemesiyle başlar.
                     </p>
                     <p>Bu dönemde, kadının eski erkek arkadaşında da artan tehdit ve şiddet söz konusu 
                         olabilir. Geleneksel bakış açısı, genç kadınların sıklıkla kendilerini erkek 
                         arkadaşlarına itaat etmek ve onların dediklerini yapmak zorunda hissetmesine 
-                        neden olur. Bu durum, diğer sosyal aktivitelerden ve arkadaşlardan vazgeçmesine, 
+                        neden olur. 
+                    </p>
+                    <p>Bu durum, diğer sosyal aktivitelerden ve arkadaşlardan vazgeçmesine, 
                         erkeğe öncelik vermesine ve ciddi bir yalıtıma yol açar. Kimi arkadaş gruplarında 
                         “mutlaka kız veya erkek arkadaşın olmalı” baskısının yaşandığı, ergen ve genç 
                         kadınların terk edilme korkusu nedeniyle erkek arkadaşlarının şiddetine boyun 
@@ -525,8 +534,8 @@
                 <h2>Sessiz Çığlık</h2>
             </div>
             <div class="footer-links">
-                <a href="#hakkimizda">Hakkımızda</a>
-                <a href="#iletisim">İletişim</a>
+                <a href="hakkimizda.html">Hakkımızda</a>
+                <a href="contact_with_us.html" target="_blank">İletişim</a>
                 <a href="#gizlilik">Gizlilik Politikası</a>
             </div>
             <div class="footer-social">
