--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bir Kişi Daha Eksilmeyeceğiz!</title>
+    <title>Ana Sayfa - Sessiz Çığlık</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="istatistikler.html">İstatistikler</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="siddetin_turleri.html">Şiddetin Türleri</a>
+                    <a class="nav-link" href="siddet_bicimleri.html">Şiddet Biçimleri</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="istanbul_sozlesmesi.html">İstanbul Sözleşmesi</a>
